# game_of_life

./: CMakeLists.txt
cmake_internal/: CMTestUtils.cmake
src/app/: CMakeLists.txt
src/app/source/: main.cpp
src/game_of_life_engine/: CMakeLists.txt
src/game_of_life_engine/include/: game_of_life.h
src/game_of_life_engine/source/: game_of_life.cpp  game_of_life_impl.cpp  grid_impl.cpp
src/game_of_life_engine/source/include_impl/: game_of_life_impl.h  grid_impl.h
src/tests/: CMakeLists.txt  file_test.cpp  init_file_test.txt  simple_test.cpp  test_utils.h
